--- a/docs/pages/example.mdx
+++ b/docs/pages/example.mdx
@@ -1,3 +1,26 @@
 # Example
 
 This is an example page.
+
+
+```ts twoslash
+// @filename: dateFormatter.ts
+// ---cut---
+
+import { format } from 'date-fns'
+
+export const dateFormatter = (toFormat: DateFormats) => (data: any) => {
+    if (!data.value) return ''
+    const date = data.value as string
+    return format(new Date(date), toFormat)
+    
+}
+
+export enum DateFormats {
+    Short = 'P',
+    ShortMonth = 'PP',
+    FullMonthYear = 'PPP',
+    Long = 'PPPP'
+}
+
+```
