--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,16 +1,15 @@
 ---
-layout: landing
+layout: minimal
+title: Laurence's Tech Blog
+# showSidebar: true
+showOutline: false
 ---
 
-import { HomePage } from 'vocs/components'
+import { LatestPosts } from '../components/LatestPosts.tsx'
 
-<HomePage.Root>
-  <HomePage.Logo />
-  <HomePage.Tagline>My Awesome Docs</HomePage.Tagline>
-  <HomePage.InstallPackage name="vocs" type="init" />
-  <HomePage.Description>This is a description of my documentation website.</HomePage.Description>
-  <HomePage.Buttons>
-    <HomePage.Button href="/getting-started" variant="accent">Get started</HomePage.Button>
-    <HomePage.Button href="https://github.com/wevm/vocs">GitHub</HomePage.Button>
-  </HomePage.Buttons>
-</HomePage.Root>
+# Laurence's Tech Blog
+
+
+### Latest
+
+<LatestPosts/>
