feat: finish home page and archive

--- a/docs/pages/posts/2023/improve-your-git-workflows-with-aliases.mdx
+++ b/docs/pages/posts/2023/improve-your-git-workflows-with-aliases.mdx
@@ -143,7 +143,7 @@ All the git aliases mentioned above can be directly added to the `~/.gitconfig` 
 # The .gitconfig file
 
 [alias]
-		# Pass in a commit Message, This will stage ALL the changed files and commit with the provided commit message
+	# Pass in a commit Message, This will stage ALL the changed files and commit with the provided commit message
     ac = !git add -A && git commit -S -m
 
     # Filter changed files based on a string and ONLY stage files that contain that substring in the diff
@@ -158,7 +158,7 @@ All the git aliases mentioned above can be directly added to the `~/.gitconfig` 
     fetch-some = "!f() { IFS=','; for b in $1; do git fetch origin $b:$b; done; unset IFS; }; f"
 
     # For each branch y in a git bare repo, run git fetch origin y:y
-    fetch-all = "!git for-each-ref --format='%(refname:short)' refs/heads/ | while read branch; do git fetch origin $branch:$branch; done"
+    fetch-all = "!git for-each-ref --format='%(refname:short)' refs/heads/ | while read branch; do git fetch origin $branch:$branch; done
 
     # List the last n checked out branches in a git repository
     last-checked = !git reflog | grep -i 'checkout: moving' | head -n
