--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -5,7 +5,7 @@ showSidebar: true
 showOutline: false
 ---
 
-import { LatestPosts } from '../components/LatestPosts.tsx'
+import { LatestPosts } from '../components/LatestPosts'
 
 # Laurence's Tech Blog
 
