--- a/docs/pages/archive.mdx
+++ b/docs/pages/archive.mdx
@@ -6,6 +6,6 @@ showSidebar: true
 
 # Archive
 
-import { PostsArchive } from '../components/PostsArchive'
+import { PostsArchive } from '../components/PostsArchive.tsx'
 
 <PostsArchive/>
