--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -5,10 +5,12 @@ showSidebar: true
 showOutline: false
 ---
 
-import { LatestPosts } from '../components/LatestPosts'
+import { LatestPosts } from '../components/LatestPosts.tsx'
 
 # Laurence's Tech Blog
 
 ### Latest
 
 <LatestPosts/>
+
+[View All Posts](/archive)
