--- a/docs/pages/posts/2024/intermittent-sleep-and-discovering-learning.mdx
+++ b/docs/pages/posts/2024/intermittent-sleep-and-discovering-learning.mdx
@@ -18,7 +18,7 @@ import { SpotifyTrack } from '../../../components/SpotifyTrack'
 <CoverPhoto src="/assets/post-covers/intermittent-sleep-and-discovering-learning.jpg" credit="The Island of Gorée, in Senegal"/>
 
 <Callout type='note'>
- "There is Gorée where my heart of hearts bleeds" - From the poem <em>It's Five O'Clock</em>, A poem by <b>Léopold Sedar Senghor</b>
+ There is Gorée where my heart of hearts bleeds,<br/> The house of red basalt brick to the right,<br/>The little red house in the middle, between two gulfs<br/>Of shadow and light.<br/> - From the poem <em>It's Five O'Clock</em>, by <b>Léopold Sedar Senghor</b>
 </Callout>
 
 Several times this week sleep evaded me. 
