--- a/docs/pages/posts/2021/organizing-codebases-js.mdx
+++ b/docs/pages/posts/2021/organizing-codebases-js.mdx
@@ -205,7 +205,7 @@ You can now run your first release by:
 npm run release
 ```
 
-> Plug: Here is an example of a [changelog for my website](https://www.laudebugs.me/changelog).
+> Plug: Here is an example of a [changelog for my website](https://www.laudebugs.net/changelog).
 
 If you create a release - then you can push that release by running:
 
